--- a/Views/EconomyPanel.xaml
+++ b/Views/EconomyPanel.xaml
@@ -12,20 +12,28 @@
     <UserControl.Resources>
         <System:Double x:Key="EM">150</System:Double>
         
-        <Storyboard x:Key="Ref_Open">
-            <ThicknessAnimation Storyboard.TargetProperty="Margin" From=" 0,0,{StaticResource EM},0" To="0,0,0,0" DecelerationRatio=".5" Duration="0:0:1" />
+        <Storyboard x:Key="Econ_Open">
+            <ThicknessAnimation Storyboard.TargetProperty="Margin" From=" 0,287,0,0" To="0,0,0,0" DecelerationRatio=".5" Duration="0:0:1" />
         </Storyboard>
-        <Storyboard x:Key="Ref_Close">
-            <ThicknessAnimation Storyboard.TargetProperty="Margin" From="0,0,0,0" To=" 0,0,{StaticResource EM},0" DecelerationRatio=".5" Duration="0:0:1" />
+        <Storyboard x:Key="Econ_Close">
+            <ThicknessAnimation Storyboard.TargetProperty="Margin" From="0,0,0,0" To=" 0,287,0,0" DecelerationRatio=".5" Duration="0:0:1" />
         </Storyboard>
     </UserControl.Resources>
     
     <UserControl.DataContext>
         <viewModel:MainPanelLogic/>
     </UserControl.DataContext>
-    
-    <Grid>
-        <Button>
+
+    <Grid x:Name="Econ" Margin="0,287,0,0">
+        <Grid.ColumnDefinitions>
+            
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Button x:Name="EconToggler" Click="EconPan_Toggle" Width="30" HorizontalAlignment="Right"/>
+        <Button Grid.Row="1">
             
         </Button>
     </Grid>
