--- a/Views/EconomyPanel.xaml
+++ b/Views/EconomyPanel.xaml
@@ -7,16 +7,19 @@
              xmlns:viewModel="clr-namespace:ArtLancer.ViewModels"
              xmlns:System="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
-             d:DesignHeight="330" d:DesignWidth="250">
+             d:DesignHeight="450" d:DesignWidth="250">
+
+
 
     <UserControl.Resources>
+
         <System:Double x:Key="EM">150</System:Double>
         
         <Storyboard x:Key="Econ_Open">
-            <ThicknessAnimation Storyboard.TargetProperty="Margin" From=" 0,287,0,0" To="0,0,0,0" DecelerationRatio=".5" Duration="0:0:1" />
+            <ThicknessAnimation Storyboard.TargetProperty="Margin" From=" 0,205,0,0" To="0,0,0,0" DecelerationRatio=".5" Duration="0:0:1" />
         </Storyboard>
         <Storyboard x:Key="Econ_Close">
-            <ThicknessAnimation Storyboard.TargetProperty="Margin" From="0,0,0,0" To=" 0,287,0,0" DecelerationRatio=".5" Duration="0:0:1" />
+            <ThicknessAnimation Storyboard.TargetProperty="Margin" From="0,0,0,0" To=" 0,205,0,0" DecelerationRatio=".5" Duration="0:0:1" />
         </Storyboard>
     </UserControl.Resources>
     
@@ -24,17 +27,46 @@
         <viewModel:MainPanelLogic/>
     </UserControl.DataContext>
 
-    <Grid x:Name="Econ" Margin="0,287,0,0">
+    <Grid x:Name="Econ" Margin="0,205,0,0">
         <Grid.ColumnDefinitions>
             
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="150"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="8*"/>
         </Grid.RowDefinitions>
-        <Button x:Name="EconToggler" Click="EconPan_Toggle" Width="30" HorizontalAlignment="Right"/>
-        <Button Grid.Row="1">
+
+        <Image 
+            Source="/ArtLancer;component/Omu.png" 
+            Grid.Row="0" 
+            Grid.Column="0" 
+            Stretch="Uniform"
+            Width="140"
+            VerticalAlignment="Bottom"
+        />
+
+        <Button 
+            x:Name="EconToggler" 
+            Click="EconPan_Toggle" 
+            Width="30" 
+            Height="30" 
+            VerticalAlignment="Bottom" 
+            HorizontalAlignment="Right" 
+            Style="{StaticResource TopRound}"
+        />
+
+        <Grid Grid.Row="1" Background="White">
             
-        </Button>
+        </Grid>
+
+        <TextBlock Grid.Row="2" Background="White">
+            
+        </TextBlock>
+
+        <ListBox Grid.Row="3" Background="White">
+            
+        </ListBox>
     </Grid>
 </UserControl>
