--- a/Views/MainPanel.xaml
+++ b/Views/MainPanel.xaml
@@ -13,8 +13,39 @@
     </UserControl.DataContext>
     
     <Grid>
-        <Button>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="4*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="4*"/>
+            <RowDefinition Height="2*"/>
+        </Grid.RowDefinitions>
+
+        <Grid Background="White">
             
-        </Button>
+        </Grid>
+
+        <Grid Background="White" Grid.Column="1">
+
+        </Grid>
+
+        <Grid Background="White" Grid.Row="1" Grid.ColumnSpan="2">
+
+        </Grid>
+
+        <Grid Background="White" Grid.Row="2" Grid.ColumnSpan="2">
+
+        </Grid>
+        
+        
+
+
+        <Border BorderBrush="White" Background="White" BorderThickness="1" CornerRadius="0 0 0 50" Grid.Row="3" Grid.ColumnSpan="2">
+            <Grid />
+        </Border>
+
     </Grid>
 </UserControl>
