--- a/Views/OptionsPanel.xaml
+++ b/Views/OptionsPanel.xaml
@@ -7,6 +7,16 @@
              mc:Ignorable="d" 
              d:DesignHeight="280" d:DesignWidth="250">
     <Grid>
-        <Button></Button>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="8*"/>
+        </Grid.RowDefinitions>
+        
     </Grid>
 </UserControl>
